--- a/lib/multi_select_web/live/demo_live.html.heex
+++ b/lib/multi_select_web/live/demo_live.html.heex
@@ -1,6 +1,6 @@
-<div id={@id} class="relative p-2 flex place-content-center">
+<div id={@id} class="relative p-2 flex place-content-left">
   <.form :let={f} for={:input} id={"#{@id}-ms-form"}
-          class="flex gap-2" phx-change="validate" phx-submit="save">
+          class="flex flex-col md:flex-row gap-5 md:gap-2" phx-change="validate" phx-submit="save">
     <label for="max_selected" class="flex px-5 text-sm font-medium text-gray-900 dark:text-gray-300 place-items-center"
            title="Limits the number of items the user is allowed to select from the list">
       <div class="flex flex-col">
@@ -14,8 +14,9 @@
            title="When 'true', the selected tags can wrap to a new line">
       <input type="checkbox" name="wrap" class="rounded w-4 h-4 mr-2 dark:checked:bg-blue-500 border border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-1 dark:bg-gray-700 dark:border-gray-600 transition duration-200"
              value="on" checked={@wrap}>
-      Wrap Selected Items
+      Wrap tags
     </label>
+    <div class="flex gap-2">
     <MultiSelect.multi_select
       id="multi"
       options={@topics}
@@ -27,6 +28,7 @@
       title="Select tipics to filter quotes"
     />
     <button name="submit" class="mt-2 p-3 h-12 rounded-md font-medium text-sm text-white bg-primary-600 hover:bg-primary-500">Submit</button>
+    </div>
   </.form>
 </div>
 <div class="w-full mt-4">
