--- a/example/lib/multi_select_example_web/live/demo_live.html.heex
+++ b/example/lib/multi_select_example_web/live/demo_live.html.heex
@@ -36,7 +36,7 @@
     <%= for qte <- @quotes do %>
       <div class="rounded overflow-hidden shadow-md dark:shadow-slate-800 m-2 p-2 flex flex-col border border-gray-200 dark:border-gray-800">
         <div class="flex">
-          <img class="w-24 h-24 mr-2 mb-2 object-contain rounded-md border border-slate-200 dark:border-slate-500"
+          <img class="w-24 h-24 mr-2 mb-2 object-contain rounded-md"
               src={qte.image <> "?size=96x96"}>
           <div class="flex flex-col">
             <div class="font-bold text-lg text-slate-800 dark:text-slate-300"><%= qte.title %></div>
