--- a/example/lib/multi_select_example_web/components/layouts/root.html.heex
+++ b/example/lib/multi_select_example_web/components/layouts/root.html.heex
@@ -9,7 +9,7 @@
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
-    <script src="//unpkg.com/alpinejs" defer></script>
+    <.script_alpinejs/>
   </head>
   <body>
     <%= @inner_content %>
