--- a/example/lib/multi_select_example_web/components/layouts/root.html.heex
+++ b/example/lib/multi_select_example_web/components/layouts/root.html.heex
@@ -7,6 +7,7 @@
     <.live_title suffix=" · Phoenix Framework">
       <%= assigns[:page_title] || "MultiSelectExample" %>
     </.live_title>
+    <link rel="icon" href="favicon.ico" />
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
     <.script_alpinejs/>
