--- a/example/lib/multi_select_example_web/components/layouts/app.html.heex
+++ b/example/lib/multi_select_example_web/components/layouts/app.html.heex
@@ -46,7 +46,7 @@
     </div>
   </div>
 </header>
-<main class="px-4 py-20 sm:px-6 lg:px-8">
+<main class="px-4 sm:py-20 sm:px-6 lg:px-8">
   <div class="mx-auto w-full">
     <.flash kind={:info} title="Success!" flash={@flash} />
     <.flash kind={:error} title="Error!" flash={@flash} />
