--- a/example/lib/multi_select_example_web/live/demo_live.html.heex
+++ b/example/lib/multi_select_example_web/live/demo_live.html.heex
@@ -1,33 +1,36 @@
-<div id={@id} class="relative p-2 flex place-content-left">
+<div id={@id} class="relative p-2 w-full place-content-left">
   <.form :let={f} for={%{}} as={:input} id={"#{@id}-ms-form"}
           class="flex flex-col md:flex-row gap-5 md:gap-2" phx-change="validate" phx-submit="save">
-    <label for="max_selected" class="flex px-5 text-sm font-medium text-gray-900 dark:text-gray-300 place-items-center"
-           title="Limits the number of items the user is allowed to select from the list">
-      <div class="flex flex-col">
-      <span class="pb-2">Max Number of Selected Items = <%= @max_selected %></span>
-      <input type="range" name="max_selected" value={@max_selected}
-        min="1" max={SampleData.topics_count()} class="mr-2 dark:checked:bg-blue-500 border border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-1 dark:bg-gray-700 dark:border-gray-600 transition duration-200"
-      >
+    <div class="flex flex-col md:flex-row w-96 p-2">
+      <div class="w-2/3">
+        <label for="max_selected" class="w-3/4 flex flex-col px-2 text-sm font-medium text-gray-900 dark:text-gray-300 place-items-center"
+              title="Limits the number of items the user is allowed to select from the list">
+          <span class="pb-2">Max# Selected = <%= @max_selected %></span>
+          <input type="range" name="max_selected" value={@max_selected}
+            min="1" max={SampleData.topics_count()}
+            class="mr-2 w-full dark:checked:bg-blue-500 border border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-1 dark:bg-gray-700 dark:border-gray-600 transition duration-200"
+          >
+        </label>
       </div>
-    </label>
-    <label for="wrap" class="flex px-5 text-sm font-medium text-gray-900 dark:text-gray-300 place-items-center"
-           title="When 'true', the selected tags can wrap to a new line">
-      <input type="checkbox" name="wrap" class="rounded w-4 h-4 mr-2 dark:checked:bg-blue-500 border border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-1 dark:bg-gray-700 dark:border-gray-600 transition duration-200"
-             value="on" checked={@wrap}>
-      Wrap tags
-    </label>
-    <div class="flex gap-2">
-    <MultiSelect.multi_select
-      id="multi"
-      options={@topics}
-      form={f}
-      on_change={fn opts -> send(self(), {:updated_options, opts}) end}
-      max_selected={@max_selected}
-      wrap={@wrap}
-      placeholder="Select topic..."
-      title="Select tipics to filter quotes"
-    />
-    <button name="submit" class="mt-2 p-3 h-12 rounded-md font-medium text-sm text-white bg-primary-600 hover:bg-primary-500">Submit</button>
+      <label for="wrap" class="w-1/3 whitespace-nowrap flex mx-2 text-sm font-medium text-gray-900 dark:text-gray-300 place-items-center"
+            title="When 'true', the selected tags can wrap to a new line">
+        <input type="checkbox" name="wrap" class="rounded w-4 h-4 mr-2 dark:checked:bg-blue-500 border border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-1 dark:bg-gray-700 dark:border-gray-600 transition duration-200"
+              value="on" checked={@wrap}>
+        Wrap tags
+      </label>
+    </div>
+    <div class="col-span-2 flex gap-2">
+      <MultiSelect.multi_select
+        id="multi"
+        options={@topics}
+        form={f}
+        on_change={fn opts -> send(self(), {:updated_options, opts}) end}
+        max_selected={@max_selected}
+        wrap={@wrap}
+        placeholder="Select topic..."
+        title="Select tipics to filter quotes"
+      />
+      <button name="submit" class="mt-2 p-3 h-12 rounded-md font-medium text-sm text-white bg-primary-600 hover:bg-primary-500">Submit</button>
     </div>
   </.form>
 </div>
