--- a/example/lib/multi_select_example_web/components/layouts/root.html.heex
+++ b/example/lib/multi_select_example_web/components/layouts/root.html.heex
@@ -10,9 +10,11 @@
     <link rel="icon" href="favicon.ico" />
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
     <.script_alpinejs/>
   </head>
   <body>
     <%= @inner_content %>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
   </body>
 </html>
